# opentelemetry-langchain-openai-embeddings

./: README.md  pyproject.toml
.github/workflow/: build_wheel.yml
.github/workflows/: build_wheel.yml
